--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "my-new-project",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "~3.3.5"
+    "bootstrap-sass": "~3.3.5",
+    "angular": "^1.5.8"
   },
   "overrides": {
     "bootstrap-sass": {
