--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1"
   },
   "overrides": {
     "bootstrap-sass": {
